scripts/nullness/original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8.txt
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:42: error: [dereference.of.nullable] dereference of possibly-null reference conn
            conn.StopReceiveThread();
            ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:52: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:62: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:74: error: [dereference.of.nullable] dereference of possibly-null reference conn
        return conn.Receive(0 /*no blocking*/ );
               ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:23: error: [initialization.fields.uninitialized] the constructor does not initialize fields: m_peerAddress, m_recvSocket
    public UdpConnector( 
           ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:34: error: [assignment] incompatible types in assignment.
        m_receiverThread = null;
                           ^
  found   : null (NullType)
  required: @Initialized @NonNull Thread
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:37: error: [initialization.fields.uninitialized] the constructor does not initialize fields: m_peerAddress, m_recvSocket
    public UdpConnector( 
           ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:50: error: [assignment] incompatible types in assignment.
        m_receiverThread = null;
                           ^
  found   : null (NullType)
  required: @Initialized @NonNull Thread
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:161: error: [assignment] incompatible types in assignment.
                UdpConnector.this.m_receiverThread = null; // 
                                                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Thread
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:54: error: [initialization.fields.uninitialized] the constructor does not initialize fields: payload
        public DtcpPacket (){}
               ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:86: error: [initialization.fields.uninitialized] the constructor does not initialize fields: payload
	public DtcpPacket (short destAddr, short srcAddr, short destCEPid, short srcCEPid, byte pdu_type)
	       ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:127: error: [method.invocation] call to getPayloadFromBytes(byte[]) not allowed on the given receiver.
		this.payload = this.getPayloadFromBytes(bytes);
		                                       ^
  found   : @UnderInitialization @NonNull DtcpPacket
  required: @Initialized @NonNull DtcpPacket
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:87: error: [initialization.fields.uninitialized] the constructor does not initialize fields: m_bufferToSend
        ShapedSendTask(String stringToSend)
        ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:92: error: [initialization.fields.uninitialized] the constructor does not initialize fields: m_stringToSend
        ShapedSendTask(byte[] bufferToSend)
        ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:55: error: [dereference.of.nullable] dereference of possibly-null reference conn
            conn.StopReceiveThread();
            ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:65: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:76: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:88: error: [dereference.of.nullable] dereference of possibly-null reference conn
        return conn.Receive(maxBlockTimeInMs /*no blocking*/ );
               ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:227: error: [method.invocation] call to StartReceiveThread() not allowed on the given receiver.
        StartReceiveThread();
                          ^
  found   : @UnderInitialization(UDPConnector.EfcpConnector.class) @NonNull EfcpConnector
  required: @Initialized @NonNull EfcpConnector
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:235: error: [initialization.fields.uninitialized] the constructor does not initialize fields: m_selfCancelHandle
        RetransmitEvent(DtcpPacket packetToTransmit)
        ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:315: error: [argument] incompatible argument for parameter arg0 of List.add.
                                            m_receiverPacketsOutOfOrder.get(m_receiverNextPacketToDeliver));
                                                                           ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:427: error: [dereference.of.nullable] dereference of possibly-null reference task
                task.cancel(false);
                ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:451: error: [dereference.of.nullable] dereference of possibly-null reference m_senderClosedWindowQueue.peek()
                    m_senderRightWindowEdge > m_senderClosedWindowQueue.peek().getSeqNum() &&
                                                                            ^
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:505: error: [dereference.of.nullable] dereference of possibly-null reference m_senderClosedWindowQueue.peek()
                    m_senderRightWindowEdge > m_senderClosedWindowQueue.peek().getSeqNum() &&
                                                                            ^
24 errors
